@@ -22,10 +22,10 @@ if ($site_config['bug_alert'] && $CURUSER['class'] >= UC_STAFF) {
             </span>
             <div class='tooltip_templates'>
                 <div id='bugmessage_tooltip' class='margin20'>
-                    <div class='size_4 has-text-centered has-text-danger has-text-weight-bold bottom10'>
+                    <div class='size_6 has-text-centered has-text-danger has-text-weight-bold bottom10'>
                         {$lang['gl_bug_alert1']}
                     </div>
-                    {$lang['gl_bug_alert2']} {$CURUSER['username']}!<br> " . sprintf($lang['gl_bugs'], $bugs[0]) . ($bugs[0] > 1 ? "{$lang['gl_bugss']}" : '') . '!
+                    <div class='has-text-centered'>{$lang['gl_bug_alert2']} {$CURUSER['username']}!<br> " . sprintf($lang['gl_bugs'], $bugs[0]) . ($bugs[0] > 1 ? "{$lang['gl_bugss']}" : '') . '!</div>
                  </div>
             </div>
         </a>
