@@ -11,10 +11,12 @@ if ($CURUSER && $CURUSER['override_class'] != 255) {
             </span>
             <div class='tooltip_templates'>
                 <div id='demotion_tooltip' class='margin20'>
-                    <div class='size_4 has-text-centered has-text-warning has-text-weight-bold bottom10'>
+                    <div class='size_6 has-text-centered has-text-warning has-text-weight-bold bottom10'>
                         {$lang['gl_temp_demotion1']}
                     </div>
-                    {$lang['gl_temp_demotion2']}
+                    <div class='has-text-centered'>
+                        {$lang['gl_temp_demotion2']}
+                    </div>
                 </div>
             </div>
         </a>
