@@ -33,11 +33,13 @@ if ($CURUSER) {
             </span>
             <div class='tooltip_templates'>
                 <div id='free_tooltip_{$fl['modifier']}' class='margin20'>
-                    <div class='size_4 has-text-centered has-text-info has-text-weight-bold bottom10'>
+                    <div class='size_6 has-text-centered has-text-info has-text-weight-bold bottom10'>
                         {$fl['title']}
                     </div>
-                    {$mode}<br>
-                    {$fl['message']} {$lang['gl_freeleech_sb']} {$fl['setby']}<br>" . ($fl['expires'] != 1 ? $lang['gl_freeleech_u'] . ' ' . get_date($fl['expires'], 'DATE') . ' (' . mkprettytime($fl['expires'] - TIME_NOW) . ' ' . $lang['gl_freeleech_tg'] . ')' : '') . '
+                    <div class='has-text-centered'>
+                        {$mode}<br>
+                        {$fl['message']} {$lang['gl_freeleech_sb']} {$fl['setby']}<br>" . ($fl['expires'] != 1 ? $lang['gl_freeleech_u'] . ' ' . get_date($fl['expires'], 'DATE') . ' (' . mkprettytime($fl['expires'] - TIME_NOW) . ' ' . $lang['gl_freeleech_tg'] . ')' : '') . '
+                    </div>
                 </div>
             </div>
         </a>
