@@ -12,8 +12,8 @@ if ($site_config['happy_hour'] === true) {
             <span class='button tag is-success dt-tooltipper-small' data-tooltip-content='#happyhour_tooltip'>{$lang['gl_happyhour']}</span>
             <div class='tooltip_templates'>
                 <div id='happyhour_tooltip' class='margin20'>
-                    <div class='size_4 has-text-centered has-text-success has-text-weight-bold bottom10'>
-                        <span class='size_6 '>{$lang['gl_happyhour']}</span>
+                    <div class='size_6 has-text-centered has-text-success has-text-weight-bold bottom10'>
+                        {$lang['gl_happyhour']}
                     </div>
                     <div class='has-text-centered has-text-white'>
                         {$lang['gl_happyhour1']}<br>" . ((happyCheck('check') == 255) ? "
