@@ -13,10 +13,11 @@ if ($site_config['msg_alert'] && $CURUSER) {
                 </span>
                 <div class='tooltip_templates'>
                     <div id='message_tooltip' class='margin20'>
-                        <div class='size_4 has-text-centered has-text-info has-text-weight-bold bottom10'>" . ($unread > 1 ? "
+                        <div class='size_6 has-text-centered has-text-success has-text-weight-bold bottom10'>" . ($unread > 1 ? "
                             {$lang['gl_newprivs']}{$lang['gl_newmesss']}" : "
-                            {$lang['gl_newpriv']}{$lang['gl_newmess']}") . '
-                        </div>' . sprintf($lang['gl_msg_alert'], $unread) . ($unread > 1 ? $lang['gl_msg_alerts'] : '') . '
+                            {$lang['gl_newpriv']}{$lang['gl_newmess']}") . "
+                        </div>
+                        <div class='has-text-centered'>" . sprintf($lang['gl_msg_alert'], $unread) . ($unread > 1 ? $lang['gl_msg_alerts'] : '') . '</div>
                     </div>
                 </div>
             </a>
