@@ -22,10 +22,12 @@ if ($site_config['report_alert'] && $CURUSER['class'] >= UC_STAFF) {
             </span>
             <div class='tooltip_templates'>
                 <div id='reportmessage_tooltip' class='margin20'>
-                    <div class='size_4 has-text-centered has-text-danger has-text-weight-bold bottom10'>
+                    <div class='size_6 has-text-centered has-text-danger has-text-weight-bold bottom10'>
                         " . ($delt_with > 1 ? $lang['gl_reportss'] . $lang['gl_reports_news'] : $lang['gl_reports'] . $lang['gl_reports_new']) . "
                     </div>
-                    {$lang['gl_hey']} {$CURUSER['username']}!<br> $delt_with " . ($delt_with > 1 ? $lang['gl_reportss'] . $lang['gl_reports_news'] : $lang['gl_reports'] . $lang['gl_reports_new']) . "{$lang['gl_reports_dealt']}
+                    <div class='has-text-centered'>
+                        {$lang['gl_hey']} {$CURUSER['username']}!<br> $delt_with " . ($delt_with > 1 ? $lang['gl_reportss'] . $lang['gl_reports_news'] : $lang['gl_reports'] . $lang['gl_reports_new']) . "{$lang['gl_reports_dealt']}
+                    </div>
                 </div>
             </div>
         </a>
