@@ -22,10 +22,12 @@ if ($site_config['uploadapp_alert'] && $CURUSER['class'] >= UC_STAFF) {
             </span>
             <div class='tooltip_templates'>
                 <div id='uploadapp_tooltip' class='margin20'>
-                    <div class='size_4 has-text-centered has-text-danger has-text-weight-bold bottom10'>
+                    <div class='size_6 has-text-centered has-text-danger has-text-weight-bold bottom10'>
                         {$lang['gl_hey']} {$CURUSER['username']}!
                     </div>
-                    $newapp {$lang['gl_uploadapp_ua']}" . ($newapp > 1 ? 's' : '') . " {$lang['gl_uploadapp_dealt']}
+                    <div class='has-text-centered'>
+                        $newapp {$lang['gl_uploadapp_ua']}" . ($newapp > 1 ? 's' : '') . " {$lang['gl_uploadapp_dealt']}
+                    </div>
                 </div>
             </div>
         </a>
