@@ -79,7 +79,7 @@ $site_config = array_merge($site_settings, $site_config, $paypal_settings, $hnr_
 $use_12_hour = !empty($session->get('use_12_hour')) ? $session->get('use_12_hour') === 'yes' ? 1 : 0 : $site_config['use_12_hour'];
 $time_string = $use_12_hour ? 'g:i:s a' : 'H:i:s';
 $time_string_without_seconds = $use_12_hour ? 'g:i a' : 'H:i';
-$site_config['time_adjust'] = 0;
+$site_config['time_adjust'] = 0; // If you have not set date_default_timezone_set to UTC, you should adjust your time to UTC here
 $site_config['time_offset'] = 0;
 $site_config['time_use_relative'] = 1;
 $site_config['time_use_relative_format'] = '{--}, ' . $time_string;
@@ -87,6 +87,7 @@ $site_config['time_use_relative_format_without_seconds'] = '{--}, ' . $time_stri
 $site_config['time_joined'] = 'j-F y';
 $site_config['time_short'] = 'jS F Y - ' . $time_string;
 $site_config['time_long'] = 'M j Y, ' . $time_string;
+$site_config['time_time'] = $time_string;
 $site_config['time_tiny'] = '';
 $site_config['time_date'] = '';
 $site_config['time_form'] = '';
