@@ -1,3 +1,6 @@
+28 Oct, 2018
+update: global blocks
+
 27 Oct, 2018
 update: wrap sql errors in pre tabs log_viewer.php
 update: remove filesize limits log_viewer.php
